--- a/playbooks/roles/scheduler-plugins/defaults/main.yml
+++ b/playbooks/roles/scheduler-plugins/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
+ocp_scheduler_plugins_enabled: false
 kubeconfig_path: "/root/openstack-upi/auth/kubeconfig"
 scheduler_plugins_repo: "https://github.com/kubernetes-sigs/scheduler-plugins.git"
 scheduler_plugins_chart_dir: "/root/scheduler-plugins/manifests/install/charts"
